<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Account.RegisterActivity">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_launcher_background"
        android:onClick="addImage" />

    <EditText
        android:id="@+id/user_registration_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#EEEEEE"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/user_registration_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:hint="@string/user"
        android:inputType="text"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="#EEEEEE"
            android:hint="@string/user_registration_password"
            android:inputType="textPassword"
            android:textAlignment="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:onClick="createAccoutn"
        android:padding="10dp"
        android:text="@string/reg_btn"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/allready_acc"
        android:textAllCaps="false"
        android:textSize="20sp" />

</LinearLayout>